# twofold

./: '  .clang-format  .gitmodules  CMakeLists.txt  test.gnu
.cache/clangd/index/: algebra.cpp.D900EEF4BD033CA4.idx  algebra.hpp.2584E54589CFA0E1.idx  audio.cpp.053501F6A6A20B6D.idx  audio.h.EDF815E677867FE3.idx  axes_functions.cpp.06B13B11B464FD31.idx  axes_functions.h.8299BC4E9D6D4730.idx  axes_object.cpp.F6B0DF0BD9A215CF.idx  axes_object.h.C719C1BAF0B105FB.idx  axes_type.cpp.61B86F1141D7FC91.idx  axes_type.h.58D46344BDFBDC02.idx  axis_type.cpp.7480CC93A1D5282A.idx  axis_type.h.AE0FF7B028FFC763.idx  backend_interface.cpp.9B007B3B23C9C0A7.idx  backend_interface.h.16EF23C288A3A266.idx  backend_registry.cpp.ECD07902A6AABCC6.idx  backend_registry.h.8738343E87E64083.idx  bars.cpp.77FF5564596DC38C.idx  bars.h.2D8E15A9D5B1F8F6.idx  box_chart.cpp.CB8EC78812DDAF51.idx  box_chart.h.575E45A8443B8803.idx  circles.cpp.BBE42B594BC72CDD.idx  circles.h.56F3F29F41C149D9.idx  colors.cpp.5E4A43595730AB02.idx  colors.h.BF218657D50FFE38.idx  common.cpp.06A0437D0B2D6592.idx  common.h.7D2469E7F490BB49.idx  concepts.h.511B5EFF0D83B3C0.idx  contourc.cpp.4514D8E765EA5812.idx  contourc.h.0B94F24C4BE57AEE.idx  contours.cpp.32E3647F90D5AAD9.idx  contours.h.F68A359BC8BFE660.idx  error_bar.cpp.44BF46A9ABE3CB80.idx  error_bar.h.5788ABDA5C9EBCB3.idx  example-data-1d.cc.CE71B21484024963.idx  example-data-2d.cc.28F7DD51D3E5D9AB.idx  example-interactive.cc.69B0CD1CB826603C.idx  example-misc.cc.CF7BC8CC438821F3.idx  figure_registry.cpp.75BC3C7B21BF5C5A.idx  figure_registry.h.54C1FF87A13A74E7.idx  figure_type.cpp.CE2B12B7950173F0.idx  (+65 more)
cmake/Modules/: FindPulseAudio.cmake
include/: aud_t.h  audio.h  transform.h  window.h
src/: CMakeLists.txt  audio.cpp  transform.cpp  twofold.cpp  window.cpp
